# Unipressed

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.ipynb  README.md  build_readme.sh  design.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_unipressed.py  test_uniprot_rest.py
.github/workflows/: build.yaml  docs.yaml
codegen/: util.py
codegen/dataset/: README.md  datasets.py  generate_fields.py  uniprot_types.py  validate.py
codegen/id_mapping/: README.md  generate.py
codegen/search/: generate_fields.py  validate.py
docs/: index.md
scripts/: generate_fields.py  uniprot_types.py  validate.py
search/: search_index.json
test/: test_request.py  test_serialize_query.py  test_validate_fields.py
test/test_dataset/: test_dataset.py  test_fetch_many.py  test_fetch_one.py  test_request.py  test_serialize_query.py  test_validate_fields.py
test/test_id_mapping/: test_id_mapping.py
unipressed/: __init__.py  base.py  dataset.py  format.py  util.py
unipressed/dataset/: __init__.py  arba.py  citations.py  core.py  database.py  diseases.py  keywords.py  locations.py  proteomes.py  search.py  taxonomy.py  type_vars.py  uniparc.py  uniprotkb.py  uniref.py  unirule.py
unipressed/dataset/generated_types/: arba.py  citations.py  database.py  diseases.py  keywords.py  locations.py  proteomes.py  taxonomy.py  uniparc.py  uniprotkb.py  uniref.py  unirule.py
unipressed/id_mapping/: __init__.py  core.py  types.py
unipressed/types/: __init__.py  arba.py  citations.py  database.py  diseases.py  keywords.py  locations.py  proteomes.py  taxonomy.py  uniparc.py  uniprotkb.py  uniref.py  unirule.py
uniprot_rest/: __init__.py  base.py  dataset.py  format.py  test.py
uniprot_rest/types/: __init__.py  arba.py  citations.py  database.py  dataset.py  diseases.py  format.py  keywords.py  locations.py  proteomes.py  query_fields.py  return_fields.py  taxonomy.py  uniparc.py  uniprotkb.py  uniref.py  unirule.py  util.py
