[tool.poetry]
name = "unipressed"
version = "1.0.0"
description = "Comprehensive Python client for the Uniprot REST API"
authors = ["Michael Milton <michael.r.milton@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://multimeric.github.io/Unipressed"
repository = "https://github.com/multimeric/Unipressed"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
typing-extensions = "^4.3.0"

[tool.poetry.group.tests.dependencies]
pytest = { version = "^7.1.2" }
fastaparser = "^1.1"

[tool.poetry.group.docs.dependencies]
mkdocstrings = { extras = ["python"], version = "^0.19.0" }
mkdocs = { version = "^1.3.1" }
mkdocs-material = { version = "^8.3.9" }
mkdocs-include-markdown-plugin = { version = "^3.6.1" }
rich = { git = "https://github.com/multimeric/rich.git", branch = "max-depth-install" }

[tool.poetry.group.readme.dependencies]
jupyter = { version = "^1.0.0", python = ">=3.8" }

[tool.poetry.group.lint.dependencies]
pre-commit = { version = "^2.20.0" }
types-requests = { version = "^2.28.7" }

[tool.poetry.group.codegen.dependencies]
typer = { version = "^0.6.1" }
inflection = { version = "^0.5.1" }
black = { version = "^22.6.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
disable_error_code = "misc"
show_error_codes = true
files = "unipressed/"

[tool.pyright]
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingTypeArgument = false
reportPrivateUsage = false